samples/_failures_safe/1761475680_a02d53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3e59f32.c: In function ‘main’:
./samples/SAFE/__tmp_a3e59f32.c:162: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_a3e59f32.c:161:5: error: expected declaration or statement at end of input
  161 |     int distances[MAX_NODES
      |     ^~~
